extend named function expression hack to object literal property values. See bug report #123529 and test added as rev 656295.

BUG: 123529

svn path=/branches/KDE/3.5/kdelibs/; revision=656296